# edge-detection-app

./: .gitignore  README.md  app - Shortcut.lnk  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  edge_detector.cpp  image_processorimage_processor.cpp  native-lib.cpp
app/src/main/java/com/example/edgedetection/: MainActivity.java  OpenGLRenderer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
web/: index.html  package.json
web/src/: viewer.ts
